--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
